[flake8]
# these error codes interfere with Black
ignore = E203, E231, E501, W503, B950
select = C,E,F,W,B,B9
exclude = docs/conf.py


[metadata]
name = x64dbgpy3
version = 0.0.2
author = ripperuts, mrexodia
description = "Python3 scripting api for x64dbg",
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/x64dbg/x64dbgpy3

[options]
package_dir =
    = src/x64dbgpy3_pkg
# packages =
#     x64dbgpy3
packages = find:

[options.packages.find]
where = src/x64dbgpy3_pkg
include = x64dbgpy3, x64dbgpy3.*